--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "70241b8e",
    "metadata": {},
    "outputs": [
@@ -146,9 +146,36 @@
     }
    ],
    "source": [
-    "print(df.head())\n",
-    "print(df.info())\n",
-    "print(df['Disease'].value_counts())\n",
+    "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8421ee5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c248d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df['Disease'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5fa8915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(df['Disease'].unique())"
    ]
   },
